--- a/styles/eomp.css
+++ b/styles/eomp.css
@@ -32,7 +32,7 @@
     font-size: 18px;
 }
 
-.menu li:hover {
+.menu li {
     background-color: #4c9e9e;
     border-radius: 5px;
     transition: 0.3s ease;
@@ -49,9 +49,7 @@ main{
     width:100vw;
 }
 /* DROPDOWN MENU */
-.mainmenu {
-    position: relative;
-}
+
 
 .dropdown {
     background-color: rgb(1, 139, 139);
@@ -73,11 +71,19 @@ main{
     text-align: center;
 }
 
-.mainmenu li:hover {
+/* .mainmenu li:hover {
     background-color: #4c9e9e;
 }
 
 .mainmenu:hover .dropdown {
+    display: block;
+} */
+
+.mainmenu li {
+    background-color: #4c9e9e;
+}
+
+.mainmenu .dropdown {
     display: block;
 }
 
@@ -107,7 +113,7 @@ input[type=checkbox] {
         
     }
 
-    .menu li:hover {
+    .menu li {
         display: inline-block;
         background-color: #4c9e9e;
         transition: 0.3 ease;
@@ -131,7 +137,7 @@ input[type=checkbox] {
         transform: translateX(35%);
     }
 
-    .dropdown li:hover {
+    .dropdown li {
         background-color: #4c9e9e;
     }
 
