--- a/styles/eomp.css
+++ b/styles/eomp.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
+    background-color:#ffe5b4ad ;
+   
   }
 
 /* NAVBAR STYLING STARTS */
@@ -10,7 +14,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 11px;
-    background-color: teal;
+    background-color: #FFE5B4;
     color: #fff;
 }
 
@@ -33,7 +37,7 @@
 }
 
 .menu li {
-    background-color: #4c9e9e;
+    background-color: #4169e1;
     border-radius: 5px;
     transition: 0.3s ease;
 }
@@ -45,14 +49,14 @@
 
 /* main */
 main{
-    height: 100vh;
-    width:100vw;
+    height: 100%;
+    width:100%;
 }
 /* DROPDOWN MENU */
 
 
 .dropdown {
-    background-color: rgb(1, 139, 139);
+    background-color: #4169e1;
     padding: 1em 0;
     position: absolute;
     /*WITH RESPECT TO PARENT*/
@@ -80,7 +84,7 @@ main{
 } */
 
 .mainmenu li {
-    background-color: #4c9e9e;
+    background-color: #4169e1;
 }
 
 .mainmenu .dropdown {
@@ -100,12 +104,122 @@ input[type=checkbox] {
     user-select: none;
 }
 
+
+/* footer start */
+footer {
+    /* min-height: 30vh;
+    bottom: -50px;
+    left:0;
+    width:100%;
+    background-color: #FFE5B4;
+    position: relative; */
+    clear: both;
+    
+   
+  }
+
+.find-us{
+    text-align: left;
+
+}
+
+.times {
+    text-align: center;
+}
+.social-icons{
+    text-align: right;
+    
+}
+/* footer end  */
+/* card */
+/* #products {
+    width: 200px;
+    text-align: center;
+   /
+    flex-direction: column; */
+
+    
+
+
+.card {
+    
+    background-color: #4169e1;
+    margin: 20px;
+    border-radius: 30px;
+    width:33.33%;
+    padding: 5px;
+    overflow: hidden;
+    float: right;
+    text-align: center;
+   
+
+    /* display;
+    padding: 5px;
+    max-width: 100%;
+    /* margin: 30px; */
+    /* border-radius: 15px;
+    float: right;
+   */
+    
+}
+
+.btn{
+    width: 100px;
+    height: 30px;
+    border-radius: 20px;
+    
+}
+
+
+/* home */
+
+
+.img-slider {
+    position: relative;
+    width: 100%;
+    height: 50%;
+    
+}
+.img-slider .slider-container {
+    position: absolute;
+    width: 300%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    animation: slider 26s infinite;
+}
+.img-slider .slider-container .slide {
+    position: relative;
+    width: 33.33333333%;
+    height: 50%;
+    float: left;
+    overflow: hidden
+}
+.img-slider .slider-container .slide img {
+  /* display: block; */
+  width: 100%;
+  height: 30%
+}
+@keyframes slider {
+    0%, 25%, 100%{left: 0}
+    
+    30%, 55%{left: -100%}
+    
+    60%, 85%{left: -200%}
+}
+
+
+
+
+
+
+
 /* applying media queries */
 @media(max-width: 768px) {
     .menu {
         display: none;
         position: absolute;
-        background-color: teal;
+        background-color: #FFE5B4;
         right: 0px;
         left: 0px;
         text-align: center;
@@ -115,7 +229,7 @@ input[type=checkbox] {
 
     .menu li {
         display: inline-block;
-        background-color: #4c9e9e;
+        background-color:#4169e1;
         transition: 0.3 ease;
     }
 
@@ -138,7 +252,7 @@ input[type=checkbox] {
     }
 
     .dropdown li {
-        background-color: #4c9e9e;
+        background-color:#4169e1;
     }
 
 }
