--- a/styles/eomp.css
+++ b/styles/eomp.css
@@ -7,7 +7,12 @@
     background-color:#ffe5b4ad ;
    
   }
+body{
+    background: #FDC830;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #F37335, #FDC830);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #F37335, #FDC830); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+}
 /* NAVBAR STYLING STARTS */
 .navbar {
     display: flex;
@@ -146,7 +151,7 @@ footer {
     background-color: #4169e1;
     margin: 20px;
     border-radius: 30px;
-    width:33.33%;
+    width:30%;
     padding: 5px;
     overflow: hidden;
     float: right;
@@ -172,41 +177,6 @@ footer {
 
 
 /* home */
-
-
-.img-slider {
-    position: relative;
-    width: 100%;
-    height: 50%;
-    
-}
-.img-slider .slider-container {
-    position: absolute;
-    width: 300%;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    animation: slider 26s infinite;
-}
-.img-slider .slider-container .slide {
-    position: relative;
-    width: 33.33333333%;
-    height: 50%;
-    float: left;
-    overflow: hidden
-}
-.img-slider .slider-container .slide img {
-  /* display: block; */
-  width: 100%;
-  height: 30%
-}
-@keyframes slider {
-    0%, 25%, 100%{left: 0}
-    
-    30%, 55%{left: -100%}
-    
-    60%, 85%{left: -200%}
-}
 
 
 
