--- a/styles/index.css
+++ b/styles/index.css
@@ -139,3 +139,41 @@ footer {
     text-align: right;
     
 }
+
+
+
+
+
+/* .img-slider {
+    position: relative;
+    width: 100%;
+    height: 50%;
+    
+}
+.img-slider .slider-container {
+    position: absolute;
+    width: 300%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    animation: slider 26s infinite;
+}
+.img-slider .slider-container .slide {
+    position: relative;
+    width: 33.33333333%;
+    height: 50%;
+    float: left;
+    overflow: hidden
+}
+.img-slider .slider-container .slide img {
+  /* display: block; */
+  /* width: 100%;
+  height: 30%
+}
+@keyframes slider {
+    0%, 25%, 100%{left: 0}
+    
+    30%, 55%{left: -100%}
+    
+    60%, 85%{left: -200%}
+} */ 
