--- a/styles/eomp.css
+++ b/styles/eomp.css
@@ -133,26 +133,21 @@ footer {
     text-align: right;
     
 }
-/* footer end  */
-/* card */
-/* #products {
-    width: 200px;
-    text-align: center;
-   /
-    flex-direction: column; */
 
-    
-
+#breakfast .breakfast, #lunch .lunch, #dinner .dinner {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
 
 .card {
-    
+    grid-column: span 1;
     background-color: #4169e1;
     margin: 20px;
     border-radius: 30px;
-    width:30%;
+    width:90%;
     padding: 5px;
     overflow: hidden;
-    float: right;
+    /* float: right; */
     text-align: center;
 
 
@@ -166,6 +161,10 @@ footer {
     float: right;
    */
     
+}
+.card-body {
+    width: 250px;
+    margin: auto;
 }
 
 .btn{
